x/programs/rust/sdk_macros/tests/ui/receiver.stderr
error: The first paramter of a function with the `#[public]` attribute must be of type `wasmlanche_sdk::Context`
 --> tests/ui/receiver.rs:7:17
  |
7 |     pub fn test(&self) {}
  |                 ^
